--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "@pagodaui/weiui",
+  "version": "0.0.3",
+  "description": "适用于uniapp的ui扩展库",
   "scripts": {
     "dev:app": "uni -p app",
     "dev:custom": "uni -p",
@@ -28,7 +31,8 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
-    "release": "npm publish --access=public"
+    "build:package": "bash internal/build.sh",
+    "release": "bash internal/publish.sh"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-alpha-3050220220719002",
@@ -43,6 +47,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3050220220719002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3050220220719002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3050220220719002",
+    "async-validator": "^4.2.5",
     "dayjs": "^1.11.1",
     "sa-sdk-miniprogram": "^1.17.9",
     "vite-plugin-eslint": "^1.3.0",
@@ -68,5 +73,18 @@
     "sass": "^1.49.10",
     "typescript": "^4.6.2",
     "vite": "^2.9.14"
-  }
+  },
+  "keywords": [
+    "uniapp"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jiangwei58/weiui"
+  },
+  "bugs": {
+    "url": "https://github.com/jiangwei58/weiui/issues"
+  },
+  "homepage": "https://github.com/jiangwei58/weiui",
+  "author": "jiangw",
+  "license": "MIT"
 }
