--- a/project.config.json
+++ b/project.config.json
@@ -45,7 +45,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.23.0",
   "appid": "wx18d3762888212542",
-  "projectname": "weiui",
+  "projectname": "papayaui",
   "condition": {},
   "editorSetting": {
     "tabIndent": "insertSpaces",
