--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pagodaui/weiui",
+  "name": "papayaui",
   "version": "0.0.20",
   "description": "适用于uniapp的ui扩展库",
   "scripts": {
@@ -79,12 +79,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jiangwei58/weiui"
+    "url": "https://github.com/jiangwei58/papayaui"
   },
   "bugs": {
-    "url": "https://github.com/jiangwei58/weiui/issues"
+    "url": "https://github.com/jiangwei58/papayaui/issues"
   },
-  "homepage": "https://github.com/jiangwei58/weiui",
+  "homepage": "https://github.com/jiangwei58/papayaui",
   "author": "jiangw",
   "license": "MIT"
 }
