--- a/package.json
+++ b/package.json
@@ -35,30 +35,31 @@
     "release": "bash internal/publish.sh"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-components": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-app": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-components": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3061620230109001",
     "async-validator": "^4.2.5",
     "dayjs": "^1.11.1",
     "sa-sdk-miniprogram": "^1.17.9",
     "vite-plugin-eslint": "^1.3.0",
-    "vue": "^3.2.37",
+    "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.0.7",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3050220220719002",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/types": "^3.0.17",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3061620230109001",
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -72,7 +73,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.49.10",
     "typescript": "^4.6.2",
-    "vite": "^2.9.14"
+    "vite": "3.2.4"
   },
   "keywords": [
     "uniapp"
