--- a/package.json
+++ b/package.json
@@ -36,18 +36,19 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-components": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-mp-jd": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3080320230523001",
     "async-validator": "^4.2.5",
     "dayjs": "^1.11.1",
     "sa-sdk-miniprogram": "^1.17.9",
@@ -56,11 +57,11 @@
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.0.17",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3061620230109001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3061620230109001",
+    "@dcloudio/types": "^3.3.3",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3080320230523001",
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -74,7 +75,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.49.10",
     "typescript": "^4.6.2",
-    "vite": "3.2.4",
+    "vite": "4.0.3",
     "vitest": "^0.30.1"
   },
   "keywords": [
