refactor: export core more

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
+  "extends": "@vue/tsconfig/tsconfig.json",
   "compilerOptions": {
-    "target": "esnext",
-    "useDefineForClassFields": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "strict": true,
-    "jsx": "preserve",
     "sourceMap": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "allowJs": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "lib": ["esnext", "dom"],
     "types": ["@dcloudio/types"]
   },
@@ -19,6 +15,5 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "typings/components.d.ts"
-  ],
-  "exclude": ["node_modules", "**/dist"]
+  ]
 }
