--- a/package.json
+++ b/package.json
@@ -33,22 +33,24 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
     "build:package": "bash internal/build.sh",
     "release": "bash internal/publish.sh",
-    "test": "vitest"
+    "test": "vitest",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-mp-jd": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-components": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-jd": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3081020230714001",
     "async-validator": "^4.2.5",
     "dayjs": "^1.11.1",
     "sa-sdk-miniprogram": "^1.17.9",
@@ -58,15 +60,16 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.3.3",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3080320230523001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3080320230523001",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3081020230714001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3081020230714001",
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
@@ -74,9 +77,10 @@
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.10",
-    "typescript": "^4.6.2",
-    "vite": "4.0.3",
-    "vitest": "^0.30.1"
+    "typescript": "^4.9.4",
+    "vite": "4.0.4",
+    "vitest": "^0.30.1",
+    "vue-tsc": "^1.0.24"
   },
   "keywords": [
     "uniapp"
