fix: type exception issue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "sourceMap": true,
     "lib": ["esnext", "dom"],
-    "types": ["@dcloudio/types"]
+    "types": ["@dcloudio/types"],
+    "ignoreDeprecations": "5.0"
   },
   "include": [
     "src/**/*.ts",
