feat: generate docs init

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@ node_modules/
 unpackage/
 dist/
 wxcomponents/
+
 docs/.vitepress/cache/
+docs/node_modules/
+docs/public/
 
 # local env files
 .env.local
