--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+    "gen:docs": "tsx scripts/generateMarkdown/index.ts",
     "build:package": "bash internal/build.sh",
     "release": "bash internal/publish.sh",
     "test": "vitest",
@@ -78,6 +79,8 @@
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.10",
+    "ts-morph": "^19.0.0",
+    "tsx": "^3.12.7",
     "typescript": "^4.9.4",
     "vite": "4.0.4",
     "vitest": "^0.30.1",
