build: add h5 simulator

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gen:docs": "tsx scripts/generateMarkdown/index.ts",
     "build:package": "bash internal/build.sh",
     "build:docs": "bash internal/build-docs.sh",
+    "build:h5-simulator": "uni build --base=/papayaui/",
     "release": "bash internal/publish.sh",
     "test": "vitest",
     "type-check": "vue-tsc --noEmit"
