chore: Update homepage

--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
   "bugs": {
     "url": "https://github.com/jiangwei58/papayaui/issues"
   },
-  "homepage": "https://github.com/jiangwei58/papayaui",
+  "homepage": "https://jiangwei58.github.io/papayaui",
   "author": "jiangw",
   "license": "MIT"
 }
