--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,12 @@
     "no-redeclare": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "vue/multi-word-component-names": [
+      "error",
+      {
+        "ignores": ["slider"]
+      }
+    ]
   }
 }
