--- a/src/manifest.json
+++ b/src/manifest.json
@@ -56,7 +56,8 @@
       "es6": true,
       "minified": true
     },
-    "usingComponents": true
+    "usingComponents": true,
+    "libVersion": "latest"
   },
   "mp-alipay": {
     "usingComponents": true
