--- a/play/package.json
+++ b/play/package.json
@@ -40,6 +40,7 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+    "build:h5-simulator": "uni build --base=/papayaui/",
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
