--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,9 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "papayaui": "workspace:*"
+  },
   "devDependencies": {
     "vite": "^4.2.1",
     "vitepress": "^1.0.0-rc.40"
