--- a/play/package.json
+++ b/play/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "uni-preset-vue",
-  "version": "0.0.0",
+  "name": "@papayaui/play",
+  "private": true,
   "scripts": {
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
