--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,25 +30,29 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Not needed if lastUpdated is not enabled
+
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: pnpm
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
+          node-version: '18'
+          cache: 'pnpm'
+
       - name: Install dependencies
         run: pnpm install
+
       - name: Build with VitePress
         run: npm run build:docs
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
           path: docs/.vitepress/dist
 
