--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.json",
   "compilerOptions": {
     "lib": ["esnext", "dom"],
+    "types": ["@dcloudio/types"],
     "ignoreDeprecations": "5.0"
   },
   "include": ["packages/papayaui/**/*.ts", "packages/papayaui/**/*.vue"]
