--- a/play/package.json
+++ b/play/package.json
@@ -44,21 +44,22 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4020420240722002",
-    "@dcloudio/uni-app-harmony": "3.0.0-4020420240722002",
-    "@dcloudio/uni-app-plus": "3.0.0-4020420240722002",
-    "@dcloudio/uni-components": "3.0.0-4020420240722002",
-    "@dcloudio/uni-h5": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-jd": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-lark": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-qq": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4020420240722002",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4020420240722002",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4020420240722002",
+    "@dcloudio/uni-app": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-plus": "3.0.0-4080520251106001",
+    "@dcloudio/uni-components": "3.0.0-4080520251106001",
+    "@dcloudio/uni-h5": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-jd": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-lark": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-qq": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4080520251106001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4080520251106001",
     "dayjs": "^1.11.1",
     "papayaui": "workspace:*",
     "vue": "^3.4.21",
@@ -66,10 +67,10 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-4020420240722002",
-    "@dcloudio/uni-cli-shared": "3.0.0-4020420240722002",
-    "@dcloudio/uni-stacktracey": "3.0.0-4020420240722002",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4020420240722002",
+    "@dcloudio/uni-automator": "3.0.0-4080520251106001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4080520251106001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4080520251106001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4080520251106001",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "sass": "^1.49.10",
