--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "^2.5.1",
+    "sass": "^1.49.10",
     "ts-morph": "^19.0.0",
     "tsx": "^3.12.7",
     "typescript": "^4.9.4",
