--- a/packages/papayaui/package.json
+++ b/packages/papayaui/package.json
@@ -4,20 +4,25 @@
   "description": "适用于uniapp的ui扩展库",
   "main": "index.ts",
   "module": "index.ts",
+  "scripts": {
+    "test": "vitest run",
+    "test-coverage": "vitest run --coverage"
+  },
   "dependencies": {
     "async-validator": "^4.2.5",
     "cos-wx-sdk-v5": "^1.8.0",
     "dayjs": "^1.11.1"
   },
   "devDependencies": {
+    "@vitest/coverage-c8": "^0.33.0",
     "sass": "^1.49.10",
     "typescript": "^4.9.4",
     "vitest": "^0.30.1",
     "vue-tsc": "^1.0.24"
   },
   "peerDependencies": {
-    "vue": "^3.4.21",
-    "sass": "^1.49.10"
+    "sass": "^1.49.10",
+    "vue": "^3.4.21"
   },
   "keywords": [
     "uniapp",
